<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialogo_titulo"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="6dp"
        android:id="@+id/txvTitulo"
        />

    <ImageView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="2dp"
        android:background="@color/white"
        android:contentDescription="@string/dialogo_imagen"
        android:scaleType="fitXY"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txvTitulo"
        android:id="@+id/imgDialogo"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialogo_subtitulo"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txvTitulo"
        android:layout_marginTop="8dp"
        android:layout_marginStart="4dp"
        android:id="@+id/txvDescripcion"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="12"
        android:hint="@string/dialogo_nombre"
        android:textAlignment="center"
        android:textSize="20sp"
        android:inputType="textMultiLine"
        android:autofillHints="@string/app_name"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txvDescripcion"
        android:layout_marginStart="40dp"
        android:id="@+id/edtDialogo">

        <requestFocus />

    </EditText>


</androidx.constraintlayout.widget.ConstraintLayout>